2012-03-24  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* include/*:
	* src/*:
	* tests/*:
	* HISTORY:
	* LICENSE: Updated to uSTL 1.6 sources.

2011-11-21  John Dallaway  <john@dallaway.org.uk>

	* include/ustl/ustring.h: Fix incorrect behaviour of iat when passed
	offset+npos. Reported by Frank Pagliughi. Patch from uSTL HEAD.
	[ Bugzilla 1001390 ]

2010-06-25  Simon Kallweit <simon.kallweit@intefo.ch>

	* include/*:
	* tests/*:
	* HISTORY:
	* LICENSE: Updated to uSTL 1.4 sources.

2009-10-06  Uwe Kindler <uwe_kindler@web.de>

	* doc/ustl.sgml: Removed cout.flush() from example and from note.
	Added note about use of compiler flag -Wno-undef.
	
2009-08-30  John Dallaway  <john@dallaway.org.uk>

	* include/*.h: Move all headers to include/ustl/ except ustl.h and
	stdint.h to avoid pollution of the root include directory in the
	eCos install tree.
	* include/ustl.h: Specify ustl/ directory when including header files.
	* cdl/ustl.h: Add include/ustl/ to the header file directory list
	using CYGPKG_USTL_CFLAGS_ADD.

2009-08-24  Uwe Kindler <uwe_kindler@web.de>

	* doc/ustl.sgml: Moved documentation from README file into
	ustl.sgml documentation file.
	* README: Remove.
	* cdl/ustl.cdl: Reference per-package documentation.
	* tests/stdtest.h: Removed unused code.

2009-08-21  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* src/bktrace.cpp: prevent inclusion of host header <execinfo.h>
	(eCos builds for Linux synthetic target).
	* src/uexception.cpp:exception::read(): initialise local
	variable stmSize.

2009-08-20  Uwe Kindler <uwe_kindler@web.de>

	* Initial contribution of uSTL library

//===========================================================================
// ####GPLCOPYRIGHTBEGIN####                                                
// -------------------------------------------                              
// This file is part of eCos, the Embedded Configurable Operating System.   